--- a/WEB-INF/web.xml
+++ b/WEB-INF/web.xml
@@ -3,4 +3,18 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
          version="3.1">
+    <context-param>
+        <description>Location to store uploaded file</description>
+        <param-name>file-upload</param-name>
+        <param-value>
+            /Users/quentinwendegass/files/
+        </param-value>
+    </context-param>
+    <context-param>
+        <description>Location to store file that is too big</description>
+        <param-name>file-upload-temp</param-name>
+        <param-value>
+            /Users/quentinwendegass/temp/
+        </param-value>
+    </context-param>
 </web-app>
