--- a/.gitignore
+++ b/.gitignore
@@ -22,5 +22,11 @@
 out/
 .idea/
 
+src/
+lib/
+*.iml
+WEB_INF/
+
+
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
